Update google jave format to version 1.24.0